Fix tab spacing

--- a/theme.scss
+++ b/theme.scss
@@ -77,6 +77,8 @@ a,
 			bottom: 0px;
 
 			li {
+				margin-left: 0px;
+				margin-right: 2px;
 
 				a {
 					background-color: $lcarsBlue;
